css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,300&display=swap');

* {
    font-family: 'Roboto', sans-serif;
    margin: 0;
}

title {
    display: none;
}

header {
   text-align: center;
   background-color: #A793DE;
   border-bottom: 10px solid #FFC800;
   align-items: center;
   justify-content: center;
   height: 230px;
}

.title {
    color: white;
    font-style: normal;
    font-weight: normal;
    font-size: 32px;
    line-height: 42px;
}

#icon {
    width: 115px;
    height: 104px;
    left: 130px;
    top: 181px;
}

#titleheaderDESKTOP {
    display: flex;
    justify-items: center;
}

#titleheaderMOBILE {
    display: none;
}

#subtitle {
    font-style: italic;
    font-weight: 300;
    font-size: 32px;
    line-height: 42px;
}

.content {
   margin: 40px; 
   align-items: center;
   display: block;
   width: 70vw;
   margin: 40px auto;
}

.minicontent {
    align-items: left;
}

.subcontent {
    /* margin-bottom: 20px; */
}

.injectiontitle {
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 26px;
    color: #A793DE;
    text-transform: uppercase;
    margin-bottom: 13px;
}

.date {
    font-style: normal;
    font-weight: 500;
    font-size: 32px;
    line-height: 42px;
    color: #3F3B4B;
    margin-bottom: 35px;
}

#BeginningDate {
    margin-bottom: 25px;
}

.indicator {
    font-style: normal;
    font-weight: normal;
    font-size: 22px;
    line-height: 26px;
    text-transform: uppercase;
    color: #9E99AE;
}

#datepicker {
    width: 70vw;
}

#disclaimer {
    text-align: center;
    font-style: normal;
    font-weight: 200;
    font-size: 10px;
    line-height: 12px;
    color: #3F3B4B;
}

@media only screen and (max-width: 600px) {

    header {
        padding-top: 20px;
    }

    #titleheaderDESKTOP {
        display: none;
    }
    
    #titleheaderMOBILE {
        display: flex;
        flex-direction: column;
    }

}

